--- a/css/common.css
+++ b/css/common.css
@@ -3,7 +3,7 @@
 *{margin: 0; padding: 0; box-sizing: border-box;}
 ul,li,ol{list-style: none;}
 a{text-decoration: none; color: black;}
-
+hr{opacity: 0.4;}
 
 .top{width: 100%; height: 30px; background-color: #227af6;}
 .top ul{width: 1200px; height: 100%; margin: 0 auto; display: flex; align-items: center;
@@ -11,11 +11,44 @@ justify-content: end;}
 .toptxt{color: white;}
 .top ul li{color: white; margin: 0 5px; font-size: 12px; font-weight: bold;}
 
-.search {width: 1200px; height: 160px; background-color: pink; margin: 0 auto; display: flex;
+.search {width: 1200px; height: 160px; margin: 0 auto; display: flex;
 justify-content: center;}
-.logo{width: 20%; height: 100%; background-color: powderblue; display: flex; align-items: center;
+.logo{width: 20%; height: 100%; display: flex; align-items: center;
 justify-content: center;}
 
-.space{width: 60%; height: 100%; background-color: salmon;}
+.space{width: 60%; height: 100%; display: flex;
+align-items: center; justify-content: center;}
+.space1{width: 630px; height: 60px; border: 2px solid #227af6;  display: flex;
+align-items: center; justify-content: space-around;}
+.down{display: flex; align-items: center; justify-content: center space-around;
+width: 100px; height: 100%;}
+.down a{margin: 0 5px;}
+.down img{width: 20px; height: 20px; margin-top: 4px; }
+.input input{width: 450px; height: 50px; border: none; font-size: 25px;}
+.glass{width: 80px; height: 100%; display: flex; justify-content: center; align-items: center;}
+.glass img{}
 
-.count{width: 20%; height: 100%; background-color: skyblue;}
+.count{width: 20%; height: 100%; display: flex; align-items: center;
+justify-content: center;}
+.count1{width: 190px; height: 100px; background-color: #fafafa; display: flex; align-items: center;
+justify-content: space-around; font-weight: bold;}
+.count2{width: 50%; font-size: 12px;}
+.count3{width: 50%; font-size: 12px; text-align: right;}
+
+.menubar{width: 100%; height: 50px; background-color: skyblue; display: flex;
+align-items: center; justify-content: center;}
+.menu{width: 1200px; height: 100%; margin: 0 auto; background-color: pink;
+    display: flex; justify-content: center; align-items: center;}
+.menu ul{display: flex; justify-content: center; align-items: center;}
+.menu ul li{margin: 0 20px; font-weight: bold;}
+.menu1 a{margin-right: 20px; font-weight: bold;}
+
+.menuall{width: 800px; height: 230px; margin: 0 auto; display: none;}
+.menuall .menuall1 li div{width: 18%; height: 100%; background-color: skyblue;
+ display: flex; align-items: center; justify-content: center;}
+.menuall .menuall1{width: 100%; height: 100%; margin: 0 auto;}
+.menuall .menuall1 li{width: 100%; height: 100%; background-color: salmon;
+display: flex; justify-content: space-evenly; align-items: center;}
+.menuall .menuall1 li div ul li{margin: 15px 0;}
+
+
