--- a/css/common.css
+++ b/css/common.css
@@ -44,10 +44,10 @@ align-items: center; justify-content: center;}
 .menu1 a{margin-right: 20px; font-weight: bold;}
 
 .menuall{width: 800px; height: 230px; margin: 0 auto; display: none;}
-.menuall .menuall1 li div{width: 18%; height: 100%; background-color: skyblue;
+.menuall .menuall1 li div{width: 18%; height: 100%;
  display: flex; align-items: center; justify-content: center;}
 .menuall .menuall1{width: 100%; height: 100%; margin: 0 auto;}
-.menuall .menuall1 li{width: 100%; height: 100%; background-color: salmon;
+.menuall .menuall1 li{width: 100%; height: 100%;
 display: flex; justify-content: space-evenly; align-items: center;}
 .menuall .menuall1 li div ul li{margin: 15px 0;}
 
