--- a/css/common.css
+++ b/css/common.css
@@ -26,7 +26,7 @@ width: 100px; height: 100%;}
 .down img{width: 20px; height: 20px; margin-top: 4px; }
 .input input{width: 450px; height: 50px; border: none; font-size: 25px;}
 .glass{width: 80px; height: 100%; display: flex; justify-content: center; align-items: center;}
-.glass img{}
+
 
 .count{width: 20%; height: 100%; display: flex; align-items: center;
 justify-content: center;}
@@ -43,7 +43,8 @@ align-items: center; justify-content: center;}
 .menu ul li{margin: 0 20px; font-weight: bold;}
 .menu1 a{margin-right: 20px; font-weight: bold;}
 
-.menuall{width: 800px; height: 230px; margin: 0 auto; display: none;}
+.menuall{width: 800px; height: 230px; margin: 0 auto; display: none; 
+position: absolute; top: 28%; left: 30%; background-color: #fafafa;}
 .menuall .menuall1 li div{width: 18%; height: 100%;
  display: flex; align-items: center; justify-content: center;}
 .menuall .menuall1{width: 100%; height: 100%; margin: 0 auto;}
@@ -51,4 +52,4 @@ align-items: center; justify-content: center;}
 display: flex; justify-content: space-evenly; align-items: center;}
 .menuall .menuall1 li div ul li{margin: 15px 0;}
 
-
+.slide{width: 1200px; height: 420px; margin: 0 auto;background-color: pink; }
