--- a/css/common.css
+++ b/css/common.css
@@ -35,16 +35,16 @@ justify-content: space-around; font-weight: bold;}
 .count2{width: 50%; font-size: 12px;}
 .count3{width: 50%; font-size: 12px; text-align: right;}
 
-.menubar{width: 100%; height: 50px; background-color: skyblue; display: flex;
+.menubar{width: 100%; height: 50px; display: flex;
 align-items: center; justify-content: center;}
-.menu{width: 1200px; height: 100%; margin: 0 auto; background-color: pink;
+.menu{width: 1200px; height: 100%; margin: 0 auto;
     display: flex; justify-content: center; align-items: center;}
 .menu ul{display: flex; justify-content: center; align-items: center;}
 .menu ul li{margin: 0 20px; font-weight: bold;}
 .menu1 a{margin-right: 20px; font-weight: bold;}
 
 .menuall{width: 800px; height: 230px; margin: 0 auto; display: none; 
-position: absolute; top: 28%; left: 30%; background-color: #fafafa;}
+position: absolute; z-index: 5; top: 27.4%; left: 30%; background-color: #fafafa;}
 .menuall .menuall1 li div{width: 18%; height: 100%;
  display: flex; align-items: center; justify-content: center;}
 .menuall .menuall1{width: 100%; height: 100%; margin: 0 auto;}
