--- a/css/main.css
+++ b/css/main.css
@@ -3,4 +3,5 @@
 
 .slide{width: 1200px; height: 420px; margin: 0 auto;background-color: pink; 
 position: relative; overflow: hidden;}
+.slide ul{width: 100%; height: 100%;}
 .slide ul li a img{width: 100%; height: 100%;}
