--- a/css/common.css
+++ b/css/common.css
@@ -42,9 +42,10 @@ align-items: center; justify-content: center;}
 .menu ul{display: flex; justify-content: center; align-items: center;}
 .menu ul li{margin: 0 20px; font-weight: bold;}
 .menu1 a{margin-right: 20px; font-weight: bold;}
+.menu3 li{color: #227af6;}
 
 .menuall{width: 800px; height: 230px; margin: 0 auto; display: none; 
-position: absolute; z-index: 5; top: 27.4%; left: 30%; background-color: #fafafa;}
+position: absolute; z-index: 5; top: 26%; left: 30%; background-color: #fafafa;}
 .menuall .menuall1 li div{width: 18%; height: 100%;
  display: flex; align-items: center; justify-content: center;}
 .menuall .menuall1{width: 100%; height: 100%; margin: 0 auto;}
