--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,13 @@
 @charset "UTF-8";
 @media(min-width:1200px){}
 
-
+.slide{width: 1200px; height: 420px; margin: 0 auto;background-color: pink; 
+    position: relative; overflow: hidden;}
+    .slide ul{width: 4800px; height: 100%; display:flex;  flex-direction: row;}
+    .slide ul li{width: 1200px; height: 100%;}
+    .slide ul li a{width: 100%; height: 100%;}
+    .slide ul li a img{width: 100%; height: 100%;}
+    .left{position: absolute; top:50%; display: block; font-size: 38px; color:#fff; line-height: 40px;
+     cursor: pointer; height: 50px; transform: translateY(-50%);}
+    .right{position: absolute; top:38%; right: 0; display: block; font-size: 38px; color:#fff; line-height: 40px;
+     cursor: pointer; height: 50px;  transform: translateY(50%);}
