--- a/css/main.css
+++ b/css/main.css
@@ -2,12 +2,43 @@
 @media(min-width:1200px){}
 
 .slide{width: 1200px; height: 420px; margin: 0 auto;background-color: pink; 
-    position: relative; overflow: hidden;}
-    .slide ul{width: 4800px; height: 100%; display:flex;  flex-direction: row;}
-    .slide ul li{width: 1200px; height: 100%;}
-    .slide ul li a{width: 100%; height: 100%;}
-    .slide ul li a img{width: 100%; height: 100%;}
-    .left{position: absolute; top:50%; display: block; font-size: 38px; color:#fff; line-height: 40px;
-     cursor: pointer; height: 50px; transform: translateY(-50%);}
-    .right{position: absolute; top:38%; right: 0; display: block; font-size: 38px; color:#fff; line-height: 40px;
-     cursor: pointer; height: 50px;  transform: translateY(50%);}
+position: relative; overflow: hidden;}
+.slide ul{width: 4800px; height: 100%; display:flex;  flex-direction: row;}
+.slide ul li{width: 1200px; height: 100%;}
+.slide ul li a{width: 100%; height: 100%;}
+.slide ul li a img{width: 100%; height: 100%;}
+.left{position: absolute; top:50%; display: block; font-size: 38px; color:#fff; line-height: 40px;
+cursor: pointer; height: 50px; transform: translateY(-50%);}
+.right{position: absolute; top:38%; right: 0; display: block; font-size: 38px; color:#fff; line-height: 40px;
+cursor: pointer; height: 50px;  transform: translateY(50%);}
+
+.boo1_bg{width: 100%; height: 400px; background-color: #e3e3e3;}
+.book1{width: 1200px; height: 400px; margin: 0 auto;
+overflow: hidden; position: relative;}
+.book1 .book1_1{width: 1100px; height: 100%; overflow: hidden; 
+margin: 0 auto;}
+.book1 .book1_2{width: 3780px; height: 100%; display: flex; flex-direction: row;}
+.book1 .book1_2 li{width: 180px; height: 300px; display: flex; justify-content: center;
+flex-direction: column; align-items: center; }
+.book1 .book1_2 li a{display: flex; flex-direction: column; justify-content: space-evenly; align-items: center; width: 130px; height: 180px;}
+.book1 .book1_2 li img{width: 130px; height: 180px;}
+.text_box{width: 130px; height: 150px; position: relative; display: flex; flex-direction: column; justify-content: space-evenly; align-items: center;}
+.text_box h3{position: absolute; left: 0; bottom: 0;}
+
+
+.book1 .book1_3{width: 100%; height: 80px; display: flex; flex-direction: row ;
+align-items: center;}
+.book1_3 h2{margin-left: 30px;}
+.book1 .book1_3 a{position: absolute; right: 20px;}
+
+
+.book1 .left2{position: absolute; top:50%; left: 0; display: block;
+cursor: pointer; height: 50px; transform: translateY(-50%);}
+.book1 .right2{position: absolute; top:38%; right: 0; display: block;
+cursor: pointer; height: 50px;  transform: translateY(50%);}
+
+.book2{width: 100%; height: 1000px; background-color: pink;}
+.book2 .book2_1{width: 1200px; height: 100%; background-color: powderblue;
+margin: 0 auto; display: flex; justify-content: space-evenly;}
+.book2 .book2_1 .book2_2{width: 800px; height: 100%; background-color: salmon;}
+.book2 .book2_1 .book2_3{width: 400px; height: 100%; background-color: springgreen;}
