--- a/css/common.css
+++ b/css/common.css
@@ -54,3 +54,5 @@ display: flex; justify-content: space-evenly; align-items: center;}
 .menuall .menuall1 li div ul li{margin: 15px 0;}
 
 
+footer{width: 100%; height: 170px; background-color: #343C47;}
+
