--- a/css/common.css
+++ b/css/common.css
@@ -55,4 +55,19 @@ display: flex; justify-content: space-evenly; align-items: center;}
 
 
 footer{width: 100%; height: 170px; background-color: #343C47;}
+.foot1{width: 1200px; height: 100%; margin: 0 auto; display: flex; flex-direction: row;
+justify-content: center; align-items: center;}
 
+.foot2{width: 800px; height: 156px; display: flex; align-items: center; justify-content: space-evenly; flex-direction: column;}
+.foot2 ul{width: 100%; height: 20px; display: flex; flex-direction: row; align-items: center;}
+.foot2 ul li{margin: 0 2px; font-size: 14px; color: white; font-weight: bold;}
+.foot2 ul li a{font-size: 14px; color: white; font-weight: bold}
+.line1{width: 2px; height: 15px; background-color: white;}
+.foot2 p{width: 100%; height: 44px; font-size: 11px; color: #9e9e9e;}
+
+
+.foot3{width: 230px; height: 156px; display: flex; flex-direction: column;
+justify-content: space-evenly;}
+.foot3 h5,p{color: white;}
+.foot3 h2{color:#8Dff83 ;}
+.foot3 p{font-size: 12px;}
