--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @charset "UTF-8";
 @media(min-width:1200px){}
 
-.slide{width: 1200px; height: 420px; margin: 0 auto;background-color: pink; 
+.slide{width: 1200px; height: 420px; margin: 0 auto;
 position: relative; overflow: hidden;}
 .slide ul{width: 4800px; height: 100%; display:flex;  flex-direction: row;}
 .slide ul li{width: 1200px; height: 100%;}
@@ -71,6 +71,26 @@ display: flex; flex-direction: row; align-items: center;}
 .banner img{width: 320px; height: 180px;}
 
 .book3{width: 1200px; height: 230px; margin: 0 auto; display: flex; flex-direction: row;
-justify-content: space-around; align-items: center; background-color: tomato;}
-.book3 .book3_1{width: 550px; height: 142px; background-color: turquoise;}
-.book3 .book3_2{width: 550px; height: 142px; background-color: yellow;}
+justify-content: space-around; align-items: center;}
+.book3 .book3_1{width: 550px; height: 142px;}
+.book3 .book3_2{width: 550px; height: 142px;}
+
+.book3_2 .notice{width: 100%; height: 36px; display: flex; justify-content: space-between;
+flex-direction: row; align-items: center;}
+.notice2{width: 100%; height: 106px; display: flex; flex-direction: column; 
+justify-content: space-around;}
+.notice3{width: 100%; height: 25px; display: flex; justify-content: space-between; 
+flex-direction: row; border-bottom: 1px solid #3e3e3e;}
+.notice3 a{font-size: 14px; color:#202020;}
+.notice3 p{font-size: 14px; color: #616161;}
+
+
+
+
+
+
+
+
+
+
+
