--- a/css/sub.css
+++ b/css/sub.css
@@ -11,8 +11,26 @@ margin-bottom: 20px; display: flex;  flex-direction: column;}
 
 
 .section1{width: 1200px; height: 400px; background-color: #fafafa; border-top: 1px solid #3e3e3e;
-margin: 0 auto;}
-
+margin: 0 auto; display: flex; justify-content: center; align-items: center;}
+.section1 .book{width: 660px; height: 300px; display: flex; flex-direction: row; justify-content: center;
+}
+.book2{width: 200px; height: 300px;}
+.book2 a{width: 100%; height: 100%;}
+.book2 a img{width: 100%; height: 100%;}
+.book3{width: 460px; height: 300px; display: flex; align-items: center; justify-content: center; 
+flex-direction: column;}
+.book3 .info{width: 340px; height: 43px; margin: 10px 0; display: flex; flex-direction: row;
+align-items: center;}
+.info1{width: 80px; height: 100%; font-size: 16px; color: #616161; 
+font-weight: bold; display: flex; 
+justify-content: flex-start; align-items: center;}
+.info2{font-size: 16px; color: #202020; font-weight: bold; width: auto; height: 100%;
+display: flex; justify-content: flex-start; align-items: center;}
+.info3{width: auto; height: 100%; display: flex; flex-direction: row; 
+justify-content: space-evenly; align-items: center; margin-left: 20px;}
+.info3 h1{color: #e14f4f;}
+.bottom{transform: rotate(90deg); width: auto; height:auto;}
+.book3 p{font-size: 14px; color: #616161; margin-left: 90px; margin-top: -15px;}
 
 
 
