--- a/css/sub.css
+++ b/css/sub.css
@@ -44,12 +44,14 @@ font-size: 16px; display: flex; align-items: center; font-weight: bold;}
 .section2_2{width: 100%; height: 185px; display: flex; flex-direction: row;}
 .section2_2_1{width: 285px; height: 100%; display: flex; justify-content: center;
 align-items: center; }
-.section2_2_1 h2{margin-left: -70px;}
+.section2_2_1 h2{margin-left: -73px;}
 .section2_2_2{width: 915px; height: 100%; border-bottom: 1px solid #d3d3d3; display: flex;
 align-items: center;}
 .section2_2_2 p{color: #202020; font-size: 16px;}
 
-
-
-
+.section2_3_1{width: 1200px; height: 130px;  display: flex; flex-direction: row;}
+.section2_3_1_1{width: 285px; height:100%; display: flex; justify-content: center;
+align-items: center;}
+.section2_3_1_1 h2{margin-left: -73px;}
+.section2_3_1_2{width: 915px; height: 100%; display: flex; align-items: center;}
 
