--- a/css/sub.css
+++ b/css/sub.css
@@ -33,8 +33,7 @@ justify-content: space-evenly; align-items: center; margin-left: 20px;}
 .book3 p{font-size: 14px; color: #616161; margin-left: 90px; margin-top: -15px;}
 
 
-.section2{width: 1200px; height: 1500px; margin: 0 auto;
-}
+.section2{width: 1200px; height: 1500px; margin: 0 auto;}
 .section2_1{width: 100%; height: 130px; display: flex; flex-direction: row;}
 .section2_1_1{width: 285px; height: 100%; display: flex; justify-content: center;
 align-items: center;}
@@ -49,9 +48,47 @@ align-items: center; }
 align-items: center;}
 .section2_2_2 p{color: #202020; font-size: 16px;}
 
+.section2_3{width: 1200px; height: 780px;}
 .section2_3_1{width: 1200px; height: 130px;  display: flex; flex-direction: row;}
 .section2_3_1_1{width: 285px; height:100%; display: flex; justify-content: center;
 align-items: center;}
 .section2_3_1_1 h2{margin-left: -73px;}
-.section2_3_1_2{width: 915px; height: 100%; display: flex; align-items: center;}
+.section2_3_1_2{width: 915px; height: 100%;  display: flex; align-items: center; justify-content: space-between;}
+.bookkorea{font-weight: bold; font-size: 20px;}
+.bookkorea:hover{color: #227af6;}
 
+.section2_3_1_3{width: 1200px; height: 350px; display: flex; justify-content: flex-end;
+}
+.data{width: 915px; height: 100%;font-weight: bold;}
+.data1{width: 100%; height: 55px; display: flex; border-top: 1px solid #d3d3d3; 
+flex-direction: row;}
+.data1_1{width: 182px; height: 100%; background-color: #fafafa;  display: flex; align-items: center;}
+.data1_1 p{color: #616161; margin-left: 10px;}
+.data1_2{width: 142.69px; height: 100%; display: flex; align-items: center;}
+.data1_2 p{color: #202020; margin-left: 10px;}
+.data1_3{width: 288.31px; height: 100%; display: flex; align-items: center;}
+.data1_3 p{color: #202020; margin-left: 10px;}
+
+.same1{width: 182px; height: 100%; background-color: #fafafa; display: flex; align-items: center;}
+.same1 p{color: #616161; margin-left: 10px;}
+
+.same2{width: 613px; height: 100%; display: flex; align-items: center;}
+.same2 p{color: #202020; margin-left: 10px;}
+
+.data2{width: 100%; height: 55px; border-top: 1px solid #d3d3d3; display: flex; flex-direction: row;}
+.data3{width: 100%; height: 55px; border-top: 1px solid #d3d3d3; display: flex; flex-direction: row;}
+.data4{width: 100%; height: 55px; border-top: 1px solid #d3d3d3; display: flex; flex-direction: row;}
+.data5{width: 100%; height: 55px; border-top: 1px solid #d3d3d3; display: flex; flex-direction: row;}
+.data6{width: 100%; height: 55px; border-top: 1px solid #d3d3d3; border-bottom: 1px solid #d3d3d3;
+display: flex; flex-direction: row;}
+
+.section2_4{width: 1200px; height: 280px; display: flex; justify-content: flex-end; }
+.section2_4_1{width: 915px; height: 100%; border-bottom: 1px solid  #d3d3d3;}
+.section2_4_1 ul{width: 100%; height: 100%; display: flex; flex-direction: row; }
+.section2_4_1 ul li{width: 20%; height: 100%;}
+
+.section2_5{width: 1200px; height: 269px; background-color: pink; display: flex; flex-direction: row;}
+.section2_5_1{width: 285px; height: 100%; background: tomato;}
+.section2_5_2{width: 915px; height: 100%; background-color: cyan;}
+
+.section3{width: 100%; }
